<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="data_picker_title">Date of crime</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_report_call">Crime Report Call</string>
    <string name="toast_no_suspect">Please choose a suspect</string>
    <string name="crime_date_text">Crime Date\n</string>

</resources>