<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ABFDAB"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/crime_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/crime_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_title_label" />

            <EditText
                android:id="@+id/crime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/crime_title_hint"
                android:minHeight="48dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#009688"
            android:textColor="#120202"
            android:textStyle="bold"
            android:text="@string/crime_date_text"
            android:layout_marginTop="6dp"/>

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/crime_solved_label" />

        <Button
            android:id="@+id/crime_suspect"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:textColor="#120202"
            android:textStyle="bold"
            android:background="@drawable/fancy_button_background"
            android:text="@string/crime_suspect_text" />

        <Button
            android:id="@+id/crime_report"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:textColor="#120202"
            android:textStyle="bold"
            android:background="@drawable/fancy_button_background"
            android:text="@string/crime_report_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#120202"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:background="@drawable/fancy_button_background"
            android:text="@string/delete_crime"
            android:id="@+id/delete_button"/>

        <Button
            android:id="@+id/crime_call_suspect"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:textColor="#120202"
            android:textStyle="bold"
            android:background="@drawable/fancy_button_background"
            android:text="@string/crime_report_call"
            />

        <Button
            android:id="@+id/view_photo_button"
            android:layout_width="match_parent"
            android:layout_marginTop="6dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#120202"
            android:textStyle="bold"
            android:background="@drawable/fancy_button_background"
            android:text="Open Photo"
            />

    </LinearLayout>

</LinearLayout>
